Implemented integration test processing flow